# matrix

./: README.md
app/: README  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/eigen-3.4.0/: CMakeLists.txt
app/src/main/cpp/eigen-3.4.0/unsupported/: CMakeLists.txt
app/src/main/java/com/example/matrix/: MainActivity.kt  MatrixInputActivity.kt  ResultActivity.kt
app/src/main/res/drawable/: rounded_button.xml
app/src/main/res/layout/: activity_main.xml  activity_matrix_input.xml  activity_result.xml
app/src/main/res/values/: colors.xml  dimens.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
